--- a/notflix-app/src/components/featured/featured.scss
+++ b/notflix-app/src/components/featured/featured.scss
@@ -1,3 +1,5 @@
+@import '../../index.scss';
+
 .featured {
     height: 90vh;
     position: relative;
@@ -39,11 +41,19 @@
 
         img {
             width: 400px;
+
+            @include mobile {
+                width: 60vw;
+            }
         }
 
         .desc {
             margin: 20px 0px;
             font-size: 16px;
+
+            @include mobile {
+                width: 60vw;
+            }
         }
 
         .buttons {
