--- a/notflix-app/src/components/navbar/navbar.scss
+++ b/notflix-app/src/components/navbar/navbar.scss
@@ -1,3 +1,5 @@
+@import '../../index.scss';
+
 .navbar {
     width: 100%;
     color: white;
@@ -21,14 +23,29 @@
         .left {
             display: flex;
             align-items: center;
+
             img {
                 height: 25px;
                 margin-right: 40px;
+
+                @include mobile {
+                    display: none;
+                }
             }
 
             span {
                 margin-right: 20px;
                 cursor: pointer;
+
+                @include tablet {
+                    display: none;
+                }
+
+                &.navbarMainLinks {
+                    @include tablet {
+                        display: block;
+                    }
+                }
             }
         }
 
