--- a/notflix-app/src/components/featured/featured.scss
+++ b/notflix-app/src/components/featured/featured.scss
@@ -2,8 +2,12 @@
 
 .featured {
     height: 90vh;
-    position: relative;
     margin-bottom: 100px;
+
+    @include smallTablet {
+        width: 100%;
+        height: auto;
+    }
 
     .category {
         position: absolute;
@@ -26,9 +30,15 @@
     }
 
     img {
-        width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
+        display: block;
+        margin: auto;
+
+        @include smallTablet {
+            width: 100%;
+            height: auto;
+        }
     }
 
     .info {
@@ -39,6 +49,16 @@
         color: white;
         display: flex;
         flex-direction: column;
+        background-color: var(--main-color);
+        border: 2px solid white;
+        padding: 7px;
+        border-radius: 5px;
+
+        @include smallTablet {
+            width: 85%;
+            position: static;
+            margin: 40px auto 0;
+        }
 
         img {
             width: 400px;
@@ -50,11 +70,16 @@
 
         .desc {
             margin: 20px 0px;
-            font-size: 16px;
+            font-size: 18px;
 
             @include mobile {
-                width: 60vw;
+                width: 100%;
             }
+        }
+
+        .descInfo {
+            font-size: 16px;
+            margin-bottom: 5px;
         }
 
         .buttons {
@@ -75,11 +100,25 @@
                 &.play {
                     background-color: white;
                     color: var(--main-color);
+
+                    &:hover {
+                        background-color: #E50914;
+                        color: white;
+                        border: 2px solid white;
+                        transition: border 0.1s ease;
+                    }
                 }
 
                 &.more {
                     background-color: gray;
                     color: white;
+
+                    &:hover {
+                        background-color: #E50914;
+                        color: white;
+                        border: 2px solid white;
+                        transition: border 0.1s ease;
+                    }
                 }
 
                 span {
