--- a/notflix-app/src/components/listItem/listItem.scss
+++ b/notflix-app/src/components/listItem/listItem.scss
@@ -2,98 +2,41 @@
 
 .listItem {
     width: 400px;
-    height: 220px;
+    height: 440px;
     background-color: var(--main-color);
     margin-right: 15px;
     overflow: hidden;
-    cursor: pointer;
     color: white;
 
     @include laptop {
-        width: 225px;
-        height: 120px;
+        width: 190px;
+        height: 250px;
         margin-right: 5px;
     }
 
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-
-    video {
-        width: 100%;
-        height: 140px;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-
-    &:hover {
-        width: 325px;
-        height: 300px;
-        position: absolute;
-        top: -150px;
-
-        box-shadow: 0px 1px 15px 0px rgba(255, 255, 255, 0.15);
-        border-radius: 5px;
+    .imageHolder {
+        margin: auto;
+        text-align: center;
+        width: 300px;
 
         @include laptop {
-            width: 325px;
-            height: 300px;
+            width: 100%;
+        }
+    }
+
+    img {
+        width: calc(100% - 6px);
+        height: 434px;
+        object-fit: contain;
+        cursor: pointer;
+
+        @include laptop {
+            height: 244px;
         }
 
-        img {
-            height: 190px;
-
-            @include laptop {
-                height: 140px;
-            }
-        }
-
-        .itemInfo {
-            display: flex;
-            flex-direction: column;
-            padding: 8px;
-
-            .icons {
-                display: flex;
-                margin-bottom: 10px;
-
-                .icon {
-                    border: 2px solid white;
-                    padding: 5px;
-                    border-radius: 50%;
-                    margin-right: 10px;
-                    font-size: 16px;
-                }
-            }
-
-            .itemInfoTop {
-                display: flex;
-                align-items: center;
-                margin-bottom: 10px;
-                font-size: 14px;
-                font-weight: 600;
-                color: gray;
-
-                .limit {
-                    border: 1px solid gray;
-                    padding: 1px 3px;
-                    margin: 0 10px;
-                }
-            }
-
-            .desc {
-                font-size: 13px;
-                margin-bottom: 10px;
-            }
-
-            .genre {
-                font-size: 14px;
-                color: lightgray;
-            }
+        &:hover {
+            border: 3px solid white;
+            object-fit: cover;
         }
     }
 }
