--- a/notflix-app/src/index.scss
+++ b/notflix-app/src/index.scss
@@ -3,8 +3,12 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+  background-color: var(--main-color);
+}
+
 :root {
-  --main-color: #0b0b0b;
+  --main-color: #141414;
 }
 
 .link {
@@ -20,6 +24,12 @@
 
 @mixin tablet {
   @media(max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin smallTablet {
+  @media(max-width: 660px) {
     @content;
   }
 }
