--- a/notflix-app/src/components/featured/featured.scss
+++ b/notflix-app/src/components/featured/featured.scss
@@ -80,6 +80,10 @@
         .descInfo {
             font-size: 16px;
             margin-bottom: 5px;
+
+            .descriptor {
+                color: #dadada;
+            }
         }
 
         .buttons {
