--- a/notflix-app/src/pages/watch/watch.scss
+++ b/notflix-app/src/pages/watch/watch.scss
@@ -1,6 +1,7 @@
 .watch {
     width: 100vw;
     height: 100vh;
+    background-color: black;
 
     .back {
         display: flex;
@@ -11,11 +12,16 @@
         color: white;
         cursor: pointer;
         z-index: 2;
+
+        &:hover {
+            color: #dadada;
+            transition: color 0.2s ease;
+        }
     }
 
     .video {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
     }
 }
