--- a/notflix-app/src/components/featured/featured.scss
+++ b/notflix-app/src/components/featured/featured.scss
@@ -49,7 +49,8 @@
         color: white;
         display: flex;
         flex-direction: column;
-        background-color: var(--main-color);
+        background-color: rgb(20, 20, 20); //Background color backup for IE
+        background-color: rgba(20, 20, 20, 0.5);
         border: 2px solid white;
         padding: 7px;
         border-radius: 5px;
