Fix scrolling bug

--- a/notflix-app/src/components/navbar/navbar.scss
+++ b/notflix-app/src/components/navbar/navbar.scss
@@ -47,6 +47,11 @@
                         display: block;
                     }
                 }
+
+                &.selected {
+                    font-weight: 600;
+                    font-size: 17px;
+                }
             }
         }
 
