--- a/notflix-app/src/components/filmCard/filmCard.scss
+++ b/notflix-app/src/components/filmCard/filmCard.scss
@@ -57,6 +57,29 @@
         }
     }
 
+    button {
+        border: none;
+        border-radius: 5px;
+        background-color: white;
+        color: black;
+        padding: 8px 25px;
+        font-size: 23px;
+        font-weight: 600;
+        margin-bottom: 15px;
+        display: flex;
+        align-items: center;
+
+        &:hover {
+            background-color: #dadada;
+            transition: all 0.25s ease;
+        }
+
+        .addIcon {
+            font-size: 34px;
+            margin-right: 10px;
+        }
+    }
+
     h2 {
         margin-bottom: 18px;
         font-size: 30px;
