--- a/notflix-app/src/components/list/list.scss
+++ b/notflix-app/src/components/list/list.scss
@@ -25,6 +25,23 @@
     .wrapper {
         position: relative;
 
+        .noContent {
+            color: white;
+            margin-left: 110px;
+            margin-top: 20px;
+            font-size: 20px;
+
+            @include laptop {
+                margin-left: 67px;
+            }
+
+            @include smallTablet {
+                margin: 20px auto 30px;
+                display: block;
+                text-align: center;
+            }
+        }
+
         button {
             width: 50px;
             height: 100%;
