Implement select menu in navbar for mobile views

--- a/notflix-app/src/components/navbar/navbar.scss
+++ b/notflix-app/src/components/navbar/navbar.scss
@@ -53,6 +53,24 @@
                     font-size: 17px;
                 }
             }
+
+            .navLinks {
+                @include tablet {
+                    display: none;
+                }
+            }
+
+            .selectForm {
+                display: none;
+
+                @include tablet {
+                    display: flex;
+                }
+            }
+
+            .selectLabel, svg, .selectShown {
+                color: white !important;
+            }
         }
 
         .rightSection {
