--- a/notflix-app/src/pages/home/home.scss
+++ b/notflix-app/src/pages/home/home.scss
@@ -31,3 +31,16 @@
         }
     }
 }
+
+.spinner {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    h4 {
+        margin-top: 30px;
+        color: white;
+    }
+}
